@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * ADDED: Library option, option/2.
+
   * DOC: Fixed all libraries to have their comments compatible with the
     emerging documentation package.
 
